@@ -17,6 +17,10 @@ under the hood
   - on windows, use / instead of \\ in tempdir name, to be consistent with 
     file.path()
 
+bug fixes
+  - range outliers (e.g. TL) show up in plot.seas() with start date, rather
+    than causing an error. (https://github.com/christophsax/seasonal/issues/163)
+
 
 1.2.1  2016-02-11
 --------------------------------------------------------------------------------
